--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 language: c
 compiler: gcc
 python:   "2.7"
-sudo:     false
+#sudo:     false
 
-install:
-    - pip install --only-binary=numpy,scipy numpy scipy
+#install:
+#    - pip install --only-binary=numpy,scipy numpy scipy
 
 before_script:
     - export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$(pwd)/lib
