--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,18 @@
 language: c
 compiler: gcc
 python:   "2.7"
-#sudo:     false
 
-#install:
-#    - pip install --only-binary=numpy,scipy numpy scipy
+install:
+    - pip install --only-binary=numpy,scipy numpy scipy
 
-#before_script:
-#    - export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$(pwd)/lib
-#    - export PYTHONPATH=$PYTHONPATH:$(pwd)/python
+before_script:
+    - export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$(pwd)/lib
+    - export PYTHONPATH=$PYTHONPATH:$(pwd)/python
 
 script:
     - make
     - make test
-#    - make pytest
+    - make pytest
 
 notifications:
     email: false
